--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                 <li><a href="#">contact</a></li>
             </ul>
         </div>
+        <div class="hero">
+            
+        </div>
     </div>
 </body>
 </html>
