--- a/index.html
+++ b/index.html
@@ -30,13 +30,24 @@
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum nam atque eum quibusdam dolor a autem laborum itaque, minima pariatur. 
                 Tenetur voluptatibus molestiae beatae dolore, dolores harum quos accusamus odit?</p>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae voluptates animi expedita tempora fugiat facilis illo beatae ab sequi, quasi ipsum soluta error suscipit veritatis dicta optio omnis, ea, ut possimus mollitia. Sapiente deleniti delectus labore nobis, adipisci sed vitae consequatur! Doloribus adipisci sed magnam vel iste quod fuga nam. Temporibus ducimus, recusandae tempora iusto alias repellat porro earum ab esse, et placeat perspiciatis harum, iure ipsam quo non. Et rem saepe ut id vero commodi, beatae optio quas eum.</
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae voluptates animi 
+                    expedita tempora fugiat facilis illo beatae ab sequi, quasi ipsum soluta error suscipit 
+                    veritatis dicta optio omnis, ea, ut possimus mollitia. Sapiente deleniti delectus labore
+                    nobis, adipisci sed vitae consequatur! Doloribus adipisci sed magnam vel iste quod
+                    fuga nam. Temporibus ducimus, recusandae tempora iusto alias repellat porro earum
+                    ab esse, et placeat perspiciatis harum, iure ipsam quo non. Et rem saepe ut id 
+                    vero commodi, beatae optio quas eum.</p>
             </div>
-            
+            <div class="sidebar">
+                <h3>Tentang Penulis</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam impedit molestias corporis deserunt commodi magnam, est labore earum itaque alias eum quidem cumque, illo explicabo quas at consequuntur ut aperiam?</p>
+            </div>
         </div>
         <div class="footer">
             <p class="copy">Copyright 2021. Fajrin</p>
+ 
         </div>
     </div>
+        
 </body>
 </html>
